@@ -58,8 +58,7 @@ and share dd's rather quirky command line interface.
 .SH EXIT STATUS
 To aid scripts that call these utilities, the exit status is set to indicate
 success (0) or failure (1 or more). Note that some of the lower values
-correspond to the SCSI sense key values to which they correspond. The exit
-status values are:
+correspond to the SCSI sense key values. The exit status values are:
 .TP
 .B 0
 success
