@@ -2,7 +2,7 @@ sg3-utils (1.25-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Sun, 22 Jul 2007 18:00:00 -0400
+ -- Doug Gilbert <dgilbert@interlog.com>  Sat, 28 Jul 2007 18:00:00 -0400
 
 sg3-utils (1.24-0.1) unstable; urgency=low
 
